[gd_scene load_steps=8 format=2]

[ext_resource path="res://SERENE_VILLAGE_REVAMPED/Animated stuff/door_16x16.png" type="Texture" id=1]
[ext_resource path="res://Misc/Doors.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.0
height = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 10.5 )

[sub_resource type="Animation" id=7]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/path = NodePath("Door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Doors" type="StaticBody2D"]
position = Vector2( -520, 56 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Door" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 5 )

[node name="DoorAnimation" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("../..")
playback_speed = 1.25
anims/Close = SubResource( 7 )
anims/Open = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
